backend-autoflow/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: autoflow
  labels:
    name: autoflow
    app: autoflow
